# pythonisms

./: README.md  pyproject.toml  pythonisms.py  test_pythonisms.py
